--- a/WpfApplication1/View/ConfigDialog.xaml
+++ b/WpfApplication1/View/ConfigDialog.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="WpfApplication1.View.ConfigDialog"
+﻿<Window x:Class="Editor.View.ConfigDialog"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="ConfigDialog" Height="300" Width="300">
