--- a/WpfApplication1/View/NewEnemy.xaml
+++ b/WpfApplication1/View/NewEnemy.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="WpfApplication1.View.NewEnemy"
+﻿<Page x:Class="Editor.View.NewEnemy"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
