--- a/WpfApplication1/View/NewObject.xaml
+++ b/WpfApplication1/View/NewObject.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="WpfApplication1.View.NewObject"
+﻿<Window x:Class="Editor.View.NewObject"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="New object" Height="500" Width="400">
     <TabControl>
         <TabItem Header="Enemy">
             <TabItem.Content>
-                <Grid>
+                <Grid Margin="0,-1,0,1">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="25*"></RowDefinition>
                         <RowDefinition Height="25*"></RowDefinition>
@@ -25,14 +25,14 @@
                         <ColumnDefinition Width="64*"></ColumnDefinition>
                     </Grid.ColumnDefinitions>
                     <Label Content="Name" HorizontalAlignment="Left" Margin="5,11,0,0" VerticalAlignment="Top" Height="26" Width="42"/>
-                    <TextBox Grid.Column="1" HorizontalAlignment="Left" Height="23" Margin="6,11,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Grid.ColumnSpan="2"/>
+                    <TextBox x:Name="Name" Grid.Column="1" HorizontalAlignment="Left" Height="23" Margin="6,11,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Grid.ColumnSpan="2"/>
                     <Image Grid.Column="2" HorizontalAlignment="Left" Height="121" Margin="95,11,0,0" Grid.RowSpan="3" VerticalAlignment="Top" Width="121" Grid.ColumnSpan="2"/>
                     <ComboBox Grid.Column="1" HorizontalAlignment="Left" Margin="6,10,0,0" Grid.Row="1" VerticalAlignment="Top" Width="120" Grid.ColumnSpan="2" Height="22"/>
                     <Label Content="Texture" HorizontalAlignment="Left" Margin="5,10,0,0" Grid.Row="1" VerticalAlignment="Top" RenderTransformOrigin="1.163,0.154" Height="26" Width="49"/>
                     <ComboBox Grid.Column="1" HorizontalAlignment="Left" Margin="7,10,0,0" Grid.Row="2" VerticalAlignment="Top" Width="120" Grid.ColumnSpan="2" Height="22"/>
                     <Label Content="Hand &#xD;&#xA;texture" HorizontalAlignment="Left" Grid.Row="2" VerticalAlignment="Top" Height="44" Width="54" Margin="5,0,0,0"/>
                     <Label Content="HP" HorizontalAlignment="Left" Margin="5,10,0,0" Grid.Row="3" VerticalAlignment="Top" Height="24" Width="49"/>
-                    <TextBox Grid.Column="1" HorizontalAlignment="Left" Height="23" Margin="6,10,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="64" Grid.Row="3"/>
+                    <TextBox x:Name="HP" Grid.Column="1" HorizontalAlignment="Left" Height="23" Margin="6,10,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="64" Grid.Row="3"/>
                     <Label Content="Width" HorizontalAlignment="Left" Margin="10,10,0,0" Grid.Row="3" VerticalAlignment="Top" Height="24" Width="49" Grid.Column="2" RenderTransformOrigin="-3.347,2.5"/>
                     <Label Content="Height" HorizontalAlignment="Left" Margin="5,10,0,0" Grid.Row="4" VerticalAlignment="Top" Height="24" Width="49" RenderTransformOrigin="-3.347,2.5"/>
                     <Label Content="Accel" HorizontalAlignment="Left" Margin="10,11,0,0" Grid.Row="4" VerticalAlignment="Top" Height="24" Width="43" RenderTransformOrigin="-3.347,2.5" Grid.Column="2"/>
@@ -40,13 +40,13 @@
                     <Label Content="MaxSpeed" HorizontalAlignment="Left" Margin="10,11,0,0" Grid.Row="5" VerticalAlignment="Top" Height="24" Width="67" RenderTransformOrigin="-3.347,2.5" Grid.Column="2"/>
                     <Label Content="Loot" HorizontalAlignment="Left" Margin="5,11,0,0" Grid.Row="6" VerticalAlignment="Top" Height="24" Width="49" RenderTransformOrigin="-3.347,2.5"/>
                     <Label Content="Length" HorizontalAlignment="Left" Margin="10,10,0,0" Grid.Row="6" VerticalAlignment="Top" Height="24" Width="49" RenderTransformOrigin="-3.347,2.5" Grid.Column="2"/>
-                    <TextBox Grid.Column="1" HorizontalAlignment="Left" Height="23" Margin="6,10,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="64" Grid.Row="4"/>
-                    <TextBox Grid.Column="1" HorizontalAlignment="Left" Height="23" Margin="6,10,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="64" Grid.Row="5"/>
-                    <TextBox Grid.Column="1" HorizontalAlignment="Left" Height="23" Margin="6,10,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="64" Grid.Row="6"/>
-                    <TextBox Grid.Column="3" HorizontalAlignment="Left" Height="23" Margin="7,11,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="56" Grid.Row="3"/>
-                    <TextBox Grid.Column="3" HorizontalAlignment="Left" Height="23" Margin="7,11,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="56" Grid.Row="4"/>
-                    <TextBox Grid.Column="3" HorizontalAlignment="Left" Height="23" Margin="7,11,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="56" Grid.Row="5"/>
-                    <TextBox Grid.Column="3" HorizontalAlignment="Left" Height="23" Margin="8,11,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="56" Grid.Row="6"/>
+                    <TextBox x:Name="Height" Grid.Column="1" HorizontalAlignment="Left" Height="23" Margin="6,10,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="64" Grid.Row="4"/>
+                    <TextBox x:Name="Jumpstr" Grid.Column="1" HorizontalAlignment="Left" Height="23" Margin="6,10,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="64" Grid.Row="5"/>
+                    <TextBox x:Name="Loot" Grid.Column="1" HorizontalAlignment="Left" Height="23" Margin="6,10,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="64" Grid.Row="6"/>
+                    <TextBox x:Name="Width" Grid.Column="3" HorizontalAlignment="Left" Height="23" Margin="7,11,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="56" Grid.Row="3"/>
+                    <TextBox x:Name="Accel" Grid.Column="3" HorizontalAlignment="Left" Height="23" Margin="7,11,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="56" Grid.Row="4"/>
+                    <TextBox x:Name="MaxSpeed" Grid.Column="3" HorizontalAlignment="Left" Height="23" Margin="7,11,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="56" Grid.Row="5"/>
+                    <TextBox x:Name="Length" Grid.Column="3" HorizontalAlignment="Left" Height="23" Margin="8,11,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="56" Grid.Row="6"/>
                 </Grid>
             </TabItem.Content>
         </TabItem>
